Added "ignores file" - haven't made it work fully yet
Works for "suites with no specs" so far

Signed-off-by: David Bakin <117694041+david-bakin-sl@users.noreply.github.com>